--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
             <version>2.8.9</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>RELEASE</version>
+        </dependency>
 
 
     </dependencies>
